fixed overflow visible issue

--- a/scss/_syntax.scss
+++ b/scss/_syntax.scss
@@ -185,6 +185,7 @@ pre code{
 }
 pre{
   padding:1em;
+  overflow:scroll;
 }
 code {
   padding:0 .25em;
